--- a/app/static/css/pmp.css
+++ b/app/static/css/pmp.css
@@ -1,3 +1,34 @@
+body {
+    background: #eee;
+    font-family: 'Roboto', sans-serif;
+}
+
 .spacing {
     margin-bottom: 10px;
+}
+
+.spacing-r {
+    margin-right: 10px;
+}
+
+.spacing-r-lg {
+    padding-right: 120px;
+}
+
+.side {
+    background: none repeat scroll 0 0 #222;
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 2;
+    padding:50px 0 0 0;
+}
+
+.z {
+ z-index:99;
+}
+
+.white {
+color: white;
 }
