--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -11,6 +11,7 @@
           rel="stylesheet" type="text/css">
     <script type="text/javascript" src="lib/underscore/underscore-min.js"></script>
     <script type="text/javascript" src="lib/jquery/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="lib/jquery-sortable.js"></script>
     <script type="text/javascript" src="lib/angular/angular.min.js"></script>
     <script type="text/javascript" src="lib/bootstrap/bootstrap.min.js"></script>
     <script type="text/javascript" src="lib/d3/d3.min.js"></script>
