--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -11,11 +11,12 @@
           rel="stylesheet" type="text/css">
     <script type="text/javascript" src="lib/underscore/underscore-min.js"></script>
     <script type="text/javascript" src="lib/jquery/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="lib/jquery-sortable.js"></script>
+    <script type="text/javascript" src="lib/jquery-sortable/jquery-sortable.js"></script>
     <script type="text/javascript" src="lib/angular/angular.min.js"></script>
     <script type="text/javascript" src="lib/bootstrap/bootstrap.min.js"></script>
     <script type="text/javascript" src="lib/d3/d3.min.js"></script>
 
+    <script src="js/charts.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
 
