--- a/app/static/css/mcm.css
+++ b/app/static/css/mcm.css
@@ -1,24 +1,14 @@
-body { 
-    height: 100%; 
-    width: 100%; 
-    margin: 0; 
-    padding-bottom: 70px;
-}
-
 body.dragging, body.dragging * {
     cursor: move !important;
 }
-
 .dragged {
     position: absolute;
     opacity: 0.5;
     z-index: 2000;
 }
-
 ul.nav li.placeholder {
     position: relative;
 }
-
 ul.nav li.placeholder:before {
     content: "";
     position: absolute;
@@ -30,18 +20,15 @@ ul.nav li.placeholder:before {
     margin-left: -5px;
     border-bottom: none;
 }
-
 .axis path, .axis line {
     fill: none;
     stroke: black;
     stroke-width: 1;
     shape-rendering: crispEdges;
 }
-
 .grid .tick, .grid path {
     fill: none;
 }
-
 .grid .tick {
     stroke: grey;
     opacity: 0.2;
@@ -49,32 +36,28 @@ ul.nav li.placeholder:before {
     stroke-dasharray: 2,2;
 }
 .grid path {
-      stroke-width: 0;
+    stroke-width: 0;
 }
-
 .custom-footer{
-    background:white; 
-    height:70px; 
-    position: fixed; 
+    background:white;
+    height:70px;
+    position: fixed;
     bottom: 0;
 }
-
 .table th.text-right, .table td.text-right {
     text-align: right;
 }
-
 div.loading {
-	position: fixed;
+    position: fixed;
     width: 92px;
     height: 92px;
     margin: auto;
     top: 40%;
     left:-46px;
     right:0;
-	z-index: 100;
-	background: url("loading.gif") no-repeat;
+    z-index: 100;
+    background: url("loading.gif") no-repeat;
 }
-
 .navigation-form {
     display: inline-block;
     margin-bottom: 0px;
@@ -84,12 +67,10 @@ div.loading {
 .node {
     cursor: pointer;
 }
-
 .node circle {
     cursor: pointer;
     stroke-width: 2px;
 }
-
 .node-text {
     cursor: pointer;
     fill: #000;
@@ -99,15 +80,12 @@ div.loading {
     textLength: 20px;
     display: none;
 }
-
 .node.expanded circle {
     fill: #fff;
 }
-
 .node.expanded .node-text {
     display: none;
 }
-
 #help {
     position: fixed;
     left: 10px;
@@ -116,8 +94,18 @@ div.loading {
     text-shadow: 1px 1px #fff;
     line-height: 20px;
 }
-
 .not-supported-message {
     margin: 20px;
 }
-/* end of graph CSS */
+img.led {
+    vertical-align: top;
+}
+.text-uppercase {
+    text-transform:uppercase;
+}
+.text-bold {
+    font-weight: bold;
+}
+.margin-r {
+    margin-right: 5px;
+}
