--- a/app/static/css/pmp.css
+++ b/app/static/css/pmp.css
@@ -7,28 +7,12 @@ body {
     margin-bottom: 10px;
 }
 
-.spacing-r {
-    margin-right: 10px;
-}
-
-.spacing-r-lg {
-    padding-right: 120px;
-}
-
-.side {
-    background: none repeat scroll 0 0 #222;
-    position: absolute;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    z-index: 2;
-    padding:50px 0 0 0;
-}
-
-.z {
- z-index:99;
-}
-
 .white {
-color: white;
+    color: white;
+}
+
+.nav-header {
+    font-weight: bold;
+    text-align: right;
+    text-transform: uppercase;
 }
