--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -5,7 +5,7 @@
     <title>Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="css/mcm.css" rel="stylesheet"/>
+    <link href="css/mcm.css"x rel="stylesheet"/>
     <link href="css/pmp.css" rel="stylesheet"/>
     <link href="http://fonts.googleapis.com/css?family=Roboto:900,400,400italic"
           rel="stylesheet" type="text/css">
@@ -19,12 +19,13 @@
     <script src="js/charts.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/directives.js"></script>
 
   </head>
 
   <body ng-controller="resultsCtrl">
 
-    <nav class="navbar navbar-inverse z" role="navigation">
+    <nav class="navbar navbar-inverse" role="navigation">
       <div class="container-fluid">
         <ul class="nav navbar-nav col-xs-12 col-sm-6 col-md-6 col-lg-6">
           <li class="hidden-xs"><a class="navbar-brand" href="#">PMP</a></li>
@@ -58,11 +59,11 @@
             <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
               <div class="hidden-xs hidden-sm">
                 <button type="button" class="btn btn-danger"
-                        ng-click="get_stats('member_of_campaign='+dashboard_stats_campaign, false)">
+                        ng-click="get_stats('member_of_campaign=' + dashboard_stats_campaign, false)">
                   See
                 </button>
                 <button type="button" class="btn btn-danger"
-                         ng-click="get_stats('member_of_campaign='+dashboard_stats_campaign, true)">
+                        ng-click="get_stats('member_of_campaign=' + dashboard_stats_campaign, true)">
                   Append
                 </button>
                 <button type="button" class="btn btn-danger" ng-click="get_stats('')">
