--- a/app/static/css/mcm.css
+++ b/app/static/css/mcm.css
@@ -1,25 +1,28 @@
+/*campaigns*/
 body.dragging, body.dragging * {
     cursor: move !important;
 }
-.dragged {
+ul.nav li {
+    position: static;
+}
+ul.nav li.dragged {
     position: absolute;
-    opacity: 0.5;
+    opacity: 0.9;
     z-index: 2000;
 }
 ul.nav li.placeholder {
     position: relative;
 }
 ul.nav li.placeholder:before {
-    content: "";
-    position: absolute;
-    width: 0;
-    height: 0;
     border: 5px solid transparent;
-    border-top-color: black;
-    top: -2px;
-    margin-left: -5px;
     border-bottom: none;
+    border-top-color: black;
+    content: "";
+    margin-left: -6px;
+    position: absolute;
+    top: -3px;
 }
+/*end-campaigns*/
 .axis path, .axis line {
     fill: none;
     stroke: black;
@@ -85,27 +88,4 @@ div.loading {
 }
 .node.expanded .node-text {
     display: none;
-}
-#help {
-    position: fixed;
-    left: 10px;
-    top: 10px;
-    font: normal 11px sans-serif;
-    text-shadow: 1px 1px #fff;
-    line-height: 20px;
-}
-.not-supported-message {
-    margin: 20px;
-}
-img.led {
-    vertical-align: top;
-}
-.text-uppercase {
-    text-transform:uppercase;
-}
-.text-bold {
-    font-weight: bold;
-}
-.margin-r {
-    margin-right: 5px;
 }
