--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -54,7 +54,7 @@
         <div class="well">
           <div class="row spacing">
             <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 spacing">
-              <input class="form-control" type="text" placeholder="Campaign Name">
+              <input ng-model="dashboard_stats_campaign" class="form-control" type="text" placeholder="Campaign Name">
             </div>
             <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
               <div class="hidden-xs hidden-sm">
