--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -59,14 +59,14 @@
             <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
               <div class="hidden-xs hidden-sm">
                 <button type="button" class="btn btn-danger"
-                        ng-click="get_stats('member_of_campaign=' + dashboard_stats_campaign, false)">
+                        ng-click="get_stats(dashboard_stats_campaign, false)">
                   See
                 </button>
                 <button type="button" class="btn btn-danger"
-                        ng-click="get_stats('member_of_campaign=' + dashboard_stats_campaign, true)">
+                        ng-click="get_stats(dashboard_stats_campaign, true)">
                   Append
                 </button>
-                <button type="button" class="btn btn-danger" ng-click="get_stats('')">
+                <button type="button" class="btn btn-danger" ng-click="get_stats('all')">
                   Load <strong>all</strong>
                 </button>
               </div>
