--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -71,13 +71,16 @@
                 </button>
               </div>
               <div class="hidden-md hidden-lg text-center">
-                <button type="button" class="btn btn-danger">
+                <button type="button" class="btn btn-danger"
+                        ng-click="get_stats(dashboard_stats_campaign, false)">
                   See
                 </button>
-                <button type="button" class="btn btn-danger">
+                <button type="button" class="btn btn-danger"
+                        ng-click="get_stats(dashboard_stats_campaign, true)">
                   Append
                 </button>
-                <button type="button" class="btn btn-danger">Load <strong>all</strong></button>
+                <button type="button" class="btn btn-danger" ng-click="get_stats('all')">
+                  Load <strong>all</strong></button>
               </div>
             </div>
           </div>
@@ -96,7 +99,7 @@
       </div>
         
       <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
 
           <mcm-customizable-chart chart-type="'mcm-column-chart'" chart-title="Requests chart"
                                   radio="requests.radio" settings="requests.settings"
