--- a/app/templates/graph.html
+++ b/app/templates/graph.html
@@ -30,13 +30,26 @@
       <div class="container-fluid">
         <ul class="nav navbar-nav col-xs-12 col-sm-6 col-md-6 col-lg-6">
           <li class="hidden-xs"><a class="navbar-brand" href="#">PMP</a></li>
-          <li><a href="/dashboard">Campaigns</a></li>
-          <li><a href="/get_stats">Get Stats</a></li>
+          <li><a href="/campaign">Campaign Stats</a></li>
+          <li><a href="/chain">Chain Stats</a></li>
         </ul>
       </div>
     </nav>
     
     <div class="container">
+
+      <div class="row">
+        <div class="hidden-xs hidden-sm col-md-12 col-lg-12">
+          <h1 class="pull-right white">
+            <strong>{{title}}</strong>
+          </h1>
+        </div>
+        <div class="col-xs-12 col-sm-12 hidden-md hidden-lg">
+          <h3 class="pull-right white">
+            <strong>{{title}}</strong>
+          </h3>
+        </div>
+      </div>
 
       <div ng-view></div>
 
