--- a/app/static/partials/campaign.html
+++ b/app/static/partials/campaign.html
@@ -1,47 +1,34 @@
 <div class="row">
-  <div class="hidden-xs hidden-sm col-md-12 col-lg-12">
-    <h1 class="pull-right white">
-      <strong>Statistics of campaigns</strong>
-    </h1>
-  </div>
-  <div class="col-xs-12 col-sm-12 hidden-md hidden-lg">
-    <h3 class="pull-right white">
-      <strong>Statistics of campaigns</strong>
-    </h3>
-  </div>
-</div>
-
-<div class="row">
   <div class="well">
     <div class="row spacing">
       <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 spacing">
-        <input ng-model="dashboard_stats_campaign" class="form-control" type="text"
+        <input ng-model="campaign" class="form-control" type="text"
                placeholder="Campaign Name">
       </div>
       <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
         <div class="hidden-xs hidden-sm">
           <button type="button" class="btn btn-danger"
-                  ng-click="get_stats(dashboard_stats_campaign, false)">
+                  ng-click="load(campaign, false)">
             See
           </button>
           <button type="button" class="btn btn-danger"
-                  ng-click="get_stats(dashboard_stats_campaign, true)">
+                  ng-click="load(campaign, true)">
             Append
           </button>
-          <button type="button" class="btn btn-danger" ng-click="get_stats('all')">
+          <button type="button" class="btn btn-danger" ng-click="load('all')">
             Load <strong>all</strong>
           </button>
         </div>
         <div class="hidden-md hidden-lg text-center">
           <button type="button" class="btn btn-danger"
-                  ng-click="get_stats(dashboard_stats_campaign, false)">
+                  ng-click="load(campaign, false)">
             See
           </button>
           <button type="button" class="btn btn-danger"
-                  ng-click="get_stats(dashboard_stats_campaign, true)">
+                  ng-click="load(campaign, true)">
             Append
           </button>
-          <button type="button" class="btn btn-danger" ng-click="get_stats('all')">
+          <button type="button" class="btn btn-danger" ng-click="load('all')">
             Load <strong>all</strong></button>
         </div>
       </div>
