--- a/app/static/partials/chain.html
+++ b/app/static/partials/chain.html
@@ -7,7 +7,7 @@
       </div>
       <div class="col-xs-2 col-sm-2 col-md-1 col-lg-1">
         <button type="button" class="btn btn-danger"
-                ng-click="load( campaign, false)">
+                ng-click="load(campaign)">
           See
         </button>
       </div>
