--- a/pmp/templates/graph.html
+++ b/pmp/templates/graph.html
@@ -5,7 +5,7 @@
     <title>Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="css/mcm.css"x rel="stylesheet"/>
+    <link href="css/mcm.css" rel="stylesheet"/>
     <link href="css/pmp.css" rel="stylesheet"/>
     <link href="http://fonts.googleapis.com/css?family=Roboto:900,400,400italic"
           rel="stylesheet" type="text/css">
