--- a/pmp/static/partials/campaign.html
+++ b/pmp/static/partials/campaign.html
@@ -1,39 +1,22 @@
 <div class="row">
   <div class="well">
-    <div class="row spacing">
-      <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 spacing">
-        <input ng-model="campaign" class="form-control" type="text"
-               placeholder="Campaign Name">
-      </div>
-      <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-        <div class="hidden-xs hidden-sm">
-          <button type="button" class="btn btn-danger"
-                  ng-click="load(campaign, false)">
-            See
-          </button>
-          <button type="button" class="btn btn-danger"
-                  ng-click="load(campaign, true)">
-            Append
-          </button>
-          <button type="button" class="btn btn-danger" ng-click="load('all')">
-            Load <strong>all</strong>
-          </button>
-        </div>
-        <div class="hidden-md hidden-lg text-center">
-          <button type="button" class="btn btn-danger"
-                  ng-click="load(campaign, false)">
-            See
-          </button>
-          <button type="button" class="btn btn-danger"
-                  ng-click="load(campaign, true)">
-            Append
-          </button>
-          <button type="button" class="btn btn-danger" ng-click="load('all')">
-            Load <strong>all</strong></button>
-        </div>
-      </div>
+    <div class="input-group spacing col-lg-12 col-md-12 col-sm-12">
+      <input ng-model="campaign" class="form-control" type="text"
+             placeholder="Campaign Name">
+      <span class="input-group-btn">
+        <button type="button" class="btn btn-danger"
+                ng-click="load(campaign, false)">
+          See
+        </button>
+        <button type="button" class="btn btn-danger"
+                ng-click="load(campaign, true)">
+          Append
+        </button>
+        <button type="button" class="btn btn-danger" ng-click="load('all')">
+          Load <strong>all</strong>
+        </button>
+      </span>
     </div>
-    
     <div class="row"> 
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <a class="text-uppercase" data-toggle="collapse" href="#advancedOptions">
