--- a/pmp/static/partials/chain.html
+++ b/pmp/static/partials/chain.html
@@ -1,18 +1,15 @@
 <div class="row">
   <div class="well">
-    <div class="row spacing">
-      <div class="col-xs-10 col-sm-10 col-md-11 col-lg-11 spacing">
-        <input ng-model="campaign" class="form-control" type="text"
-               placeholder="Campaign Name">
-      </div>
-      <div class="col-xs-2 col-sm-2 col-md-1 col-lg-1">
+    <div class="input-group spacing col-lg-12 col-md-12 col-sm-12">
+      <input ng-model="campaign" class="form-control" type="text"
+             placeholder="Campaign Name">
+      <span class="input-group-btn">
         <button type="button" class="btn btn-danger"
                 ng-click="load(campaign)">
           See
         </button>
-      </div>
+      </span>
     </div>
-    
     <div class="row"> 
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <a class="text-uppercase" data-toggle="collapse" href="#advancedOptions">
