loading icon added

--- a/pmp/static/partials/campaign.html
+++ b/pmp/static/partials/campaign.html
@@ -30,6 +30,10 @@
   </div>
 </div>
 
+<div class="row text-center" ng-show="loadingData">
+  <i class="fa fa-spinner fa-spin fa-5x"></i>
+</div>
+
 <div class="row" ng-show="allRequestData.length">
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
     
