--- a/pmp/templates/graph.html
+++ b/pmp/templates/graph.html
@@ -5,6 +5,7 @@
     <title>Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <link href="css/mcm.css" rel="stylesheet"/>
     <link href="css/pmp.css" rel="stylesheet"/>
     <link href="http://fonts.googleapis.com/css?family=Roboto:900,400,400italic"
@@ -16,6 +17,7 @@
     <script type="text/javascript" src="lib/angular/angular-route.js"></script>
     <script type="text/javascript" src="lib/bootstrap/bootstrap.min.js"></script>
     <script type="text/javascript" src="lib/d3/d3.min.js"></script>
+
 
     <script src="js/charts.js"></script>
     <script src="js/app.js"></script>
