--- a/pmp/templates/graph.html
+++ b/pmp/templates/graph.html
@@ -10,6 +10,7 @@
     <link href="css/pmp.css" rel="stylesheet"/>
     <link href="http://fonts.googleapis.com/css?family=Roboto:900,400,400italic"
           rel="stylesheet" type="text/css">
+
     <script type="text/javascript" src="lib/underscore/underscore-min.js"></script>
     <script type="text/javascript" src="lib/jquery/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="lib/jquery-sortable/jquery-sortable.js"></script>
@@ -18,12 +19,10 @@
     <script type="text/javascript" src="lib/bootstrap/bootstrap.min.js"></script>
     <script type="text/javascript" src="lib/d3/d3.min.js"></script>
 
-
     <script src="js/charts.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/directives.js"></script>
-
   </head>
   <body ng-controller="MainController">
 
@@ -33,6 +32,8 @@
           <li class="hidden-xs"><a class="navbar-brand" href="#">PMP</a></li>
           <li><a href="/campaign">Campaign Stats</a></li>
           <li><a href="/chain">Chain Stats</a></li>
+          <li><a href="https://twiki.cern.ch/twiki/bin/viewauth/CMS/PdmVpMp"
+                 target="_blank">About</a></li>
         </ul>
       </div>
     </nav>
