--- a/pmp/templates/graph.html
+++ b/pmp/templates/graph.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="pmpApp" id="ng-app">
 
   <head>
-    <title>Dashboard</title>
+    <title>Production Monitoring Platform</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
@@ -23,13 +23,16 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/directives.js"></script>
+
+    <link rel="shortcut icon" type="image/x-icon" href="/img/ic_fav.png">
   </head>
   <body ng-controller="MainController">
-
     <nav class="navbar navbar-inverse" role="navigation">
       <div class="container-fluid">
-        <ul class="nav navbar-nav col-xs-12 col-sm-6 col-md-6 col-lg-6">
-          <li class="hidden-xs"><a class="navbar-brand" href="#">PMP</a></li>
+        <a class="" href="/">
+          <img src="/img/ic_fav.png" class="brand-adjust" alt="PMP"/>
+        </a>
+        <ul class="nav navbar-header navbar-nav col-xs-12 col-sm-6 col-md-6 col-lg-6">
           <li><a href="/campaign">Campaign Stats</a></li>
           <li><a href="/chain">Chain Stats</a></li>
           <li><a href="https://twiki.cern.ch/twiki/bin/viewauth/CMS/PdmVpMp"
