--- a/pmp/static/partials/index.html
+++ b/pmp/static/partials/index.html
@@ -10,7 +10,7 @@
   <hr class="line"/>
   <div class="col-lg-10 col-lg-offset-1">
     <div class="col-lg-4">
-      <a href="/campaign">
+      <a href="#" ng-click="nav('/campaign')">
         <i class="fa fa-bar-chart fa-5x"></i>
         <h3>Campaigns</h3>
       </a>
@@ -19,7 +19,7 @@
       </p>
     </div>
     <div class="col-lg-4">
-      <a href="/chain">
+      <a href="#" ng-click="nav('/chain')">
         <i class="fa fa-chain fa-spin fa-5x"></i>
         <h3>Chains</h3>
       </a>
@@ -28,7 +28,7 @@
       </p>
     </div>
     <div class="col-lg-4">
-      <a href="/about">
+      <a href="https://twiki.cern.ch/twiki/bin/viewauth/CMS/PdmVpMp" target="_blank">
         <i class="fa fa-info fa-5x"></i>
         <h3>About</h3>
       </a>
