--- a/pmp/static/partials/campaign.html
+++ b/pmp/static/partials/campaign.html
@@ -1,4 +1,17 @@
 <div class="row">
+  <div class="hidden-xs hidden-sm col-md-12 col-lg-12">
+    <h1 class="pull-right white">
+      <strong>{{title}}</strong>
+    </h1>
+  </div>
+  <div class="col-xs-12 col-sm-12 hidden-md hidden-lg">
+    <h3 class="pull-right white">
+      <strong>{{title}}</strong>
+          </h3>
+  </div>
+</div>
+
+<div class="row">
   <div class="well">
     <div class="input-group spacing col-lg-12 col-md-12 col-sm-12">
       <input ng-model="campaign" class="form-control" type="text"
