--- a/pmp/static/partials/campaign.html
+++ b/pmp/static/partials/campaign.html
@@ -51,7 +51,7 @@
       <div id="share" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <div class="input-group input-group-sm">
           <span class="hidden-sm input-group-addon text-uppercase">Share</span>
-          <input type="text" class="form-control" placeholder="URL">
+          <input type="text" class="form-control" ng-model="url" placeholder="URL">
           <span class="input-group-addon"><i class="fa fa-copy"></i></span>
         </div>
       </div>
