--- a/pmp/static/partials/campaign.html
+++ b/pmp/static/partials/campaign.html
@@ -51,8 +51,11 @@
       <div id="share" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <div class="input-group input-group-sm">
           <span class="hidden-sm input-group-addon text-uppercase">Share</span>
-          <input type="text" class="form-control" ng-model="url" placeholder="URL">
-          <span class="input-group-addon"><i class="fa fa-copy"></i></span>
+          <input id="url" type="text" class="form-control" ng-model="url"
+                 placeholder="Refresh to get URL">
+          <span id="copy" data-clipboard-text="{{url}}" class="input-group-addon pointer">
+            <i class="fa fa-copy"></i>
+          </span>
         </div>
       </div>
     </div>
