--- a/pmp/templates/graph.html
+++ b/pmp/templates/graph.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="lib/angular/angular-route.js"></script>
     <script type="text/javascript" src="lib/bootstrap/bootstrap.min.js"></script>
     <script type="text/javascript" src="lib/d3/d3.min.js"></script>
+    <script type="text/javascript" src="lib/zeroclipboard/ZeroClipboard.min.js"></script>
 
     <script src="js/charts.js"></script>
     <script src="js/app.js"></script>
