--- a/pmp/templates/graph.html
+++ b/pmp/templates/graph.html
@@ -5,6 +5,7 @@
     <title>Production Monitoring Platform</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="//www.fuelcdn.com/fuelux/3.4.0/css/fuelux.min.css" rel="stylesheet"/>
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <link href="lib/animate/animate.min.css" rel="stylesheet"/>
     <link href="css/mcm.css" rel="stylesheet"/>
@@ -20,6 +21,7 @@
     <script type="text/javascript" src="lib/angular/angular-route.js"></script>
     <script type="text/javascript" src="lib/bootstrap/bootstrap.min.js"></script>
     <script type="text/javascript" src="lib/d3/d3.min.js"></script>
+    <script type="text/javascript" src="//www.fuelcdn.com/fuelux/3.4.0/js/fuelux.min.js"></script>
     <script type="text/javascript" src="lib/zeroclipboard/ZeroClipboard.min.js"></script>
 
     <script src="js/charts.js"></script>
