--- a/pmp/static/partials/campaign.html
+++ b/pmp/static/partials/campaign.html
@@ -8,7 +8,7 @@
     <div class="row">
       <div class="well spacing">
         <div class="row">
-          <div class="col-lg-11">
+          <div class="col-lg-11 col-md-11 col-sm-11 col-xs-11">
             <div class="input-group spacing">
               <input ng-model="campaign" class="form-control" type="text"
                      placeholder="Campaign Name">
@@ -62,6 +62,13 @@
 </div>
 
 <div class="row" ng-show="allRequestData.length">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+    <div class="pillbox" data-initialize="pillbox" id="campaignPillbox">
+      <ul class="clearfix pill-group">
+      </ul>
+    </div>
+  </div>
+  
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
     
     <mcm-customizable-chart chart-type="'mcm-column-chart'" chart-title="Requests chart"
@@ -78,3 +85,5 @@
     
   </div>
 </div>
+
+
