--- a/pmp/static/css/pmp.css
+++ b/pmp/static/css/pmp.css
@@ -51,20 +51,6 @@ body {
 .white {
     color: white;
 }
-/*hack for fuelux*/
-.glyphicon-close-sign:before {
-    content: "\e083";
+.tags.label{
+    font-weight: normal;
 }
-.glyphicon-close-circle:before {
-    content: "\e088";
-}
-.glyphicon-close:before {
-    content: "\e014";
-}
-.pill{
-    margin: 0 5px;
-}
-.pill-group {
-    padding: 0;
-}
-/*end*/
