--- a/pmp/templates/graph.html
+++ b/pmp/templates/graph.html
@@ -21,17 +21,22 @@
     <script type="text/javascript" src="lib/angular/angular-route.js"></script>
     <script type="text/javascript" src="lib/bootstrap/bootstrap.min.js"></script>
     <script type="text/javascript" src="lib/d3/d3.min.js"></script>
-    <script type="text/javascript" src="//www.fuelcdn.com/fuelux/3.4.0/js/fuelux.min.js"></script>
     <script type="text/javascript" src="lib/zeroclipboard/ZeroClipboard.min.js"></script>
+
+    <script src="lib/bootstrap-tags/bootstrap-tags.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="lib/bootstrap-tags/bootstrap-tags.css" />
+
+
 
     <script src="js/charts.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/directives.js"></script>
 
+
     <link rel="shortcut icon" type="image/x-icon" href="/img/ic_fav.png">
   </head>
-  <body ng-controller="MainController">
+  <body ng-controller="MainController" class="fuelux">
     <nav class="navbar navbar-inverse" role="navigation">
       <div class="container-fluid">
         <a href="#" ng-click="nav('/')">
@@ -46,7 +51,7 @@
       </div>
     </nav>
 
-    <div class="container">
+    <div class="container" id="ctn">
       <div class="row">
         <div class="row">
           <div class="col-lg-offset-9 col-lg-3 col-md-offset-9 col-md-3 col-sm-offset-9 col-sm-3">
