--- a/pmp/templates/graph.html
+++ b/pmp/templates/graph.html
@@ -5,7 +5,7 @@
     <title>Production Monitoring Platform</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="//www.fuelcdn.com/fuelux/3.4.0/css/fuelux.min.css" rel="stylesheet"/>
+    <link href="lib/bootstrap-tags/bootstrap-tags.css" rel="stylesheet"/>
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <link href="lib/animate/animate.min.css" rel="stylesheet"/>
     <link href="css/mcm.css" rel="stylesheet"/>
@@ -16,23 +16,18 @@
     <script type="text/javascript" src="lib/underscore/underscore-min.js"></script>
     <script type="text/javascript" src="lib/jquery/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="lib/jquery-sortable/jquery-sortable.js"></script>
+    <script type="text/javascript" src="lib/bootstrap/bootstrap.min.js"></script>
+    <script type="text/javascript" src="lib/bootstrap-tags/bootstrap-tags.min.js"></script>
     <script type="text/javascript" src="lib/angular/angular.min.js"></script>
     <script type="text/javascript" src="lib/angular/angular-animate.min.js"></script>
     <script type="text/javascript" src="lib/angular/angular-route.js"></script>
-    <script type="text/javascript" src="lib/bootstrap/bootstrap.min.js"></script>
     <script type="text/javascript" src="lib/d3/d3.min.js"></script>
     <script type="text/javascript" src="lib/zeroclipboard/ZeroClipboard.min.js"></script>
-
-    <script src="lib/bootstrap-tags/bootstrap-tags.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="lib/bootstrap-tags/bootstrap-tags.css" />
-
-
 
     <script src="js/charts.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/directives.js"></script>
-
 
     <link rel="shortcut icon" type="image/x-icon" href="/img/ic_fav.png">
   </head>
