--- a/pmp/static/partials/campaign.html
+++ b/pmp/static/partials/campaign.html
@@ -50,7 +50,7 @@
       </div>
       <div id="share" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <div class="input-group input-group-sm">
-          <span class="hidden-sm input-group-addon text-uppercase" ng-click="setURL('','')">Share</span>
+          <span class="hidden-sm input-group-addon text-uppercase" ng-click="setURL()">Share</span>
           <input id="url" type="text" class="form-control" ng-model="url"
                  placeholder="Refresh to get URL">
           <span id="copy" data-clipboard-text="{{url}}" class="input-group-addon pointer">
@@ -61,11 +61,13 @@
   </div>
 </div>
 
-<div class="row" ng-show="allRequestData.length">
+<div class="row">
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
     <div id="campaignList"></div>
   </div>
-  
+</div>
+
+<div class="row" ng-show="allRequestData.length">
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
     
     <mcm-customizable-chart chart-type="'mcm-column-chart'" chart-title="Requests chart"
