--- a/pmp/templates/graph.html
+++ b/pmp/templates/graph.html
@@ -4,33 +4,34 @@
   <head>
     <title>Production Monitoring Platform</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="lib/bootstrap-tags/bootstrap-tags.css" rel="stylesheet"/>
-    <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
-    <link href="lib/animate/animate.min.css" rel="stylesheet"/>
-    <link href="css/pmp.css" rel="stylesheet"/>
+    <link href="/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="/lib/bootstrap-tags/bootstrap-tags.css" rel="stylesheet"/>
+    <link href="/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
+    <link href="/lib/animate/animate.min.css" rel="stylesheet"/>
+    <link href="/css/pmp.css" rel="stylesheet"/>
     <link href="http://fonts.googleapis.com/css?family=Roboto:900,400,400italic"
           rel="stylesheet" type="text/css">
 
-    <script type="text/javascript" src="lib/underscore/underscore-min.js"></script>
-    <script type="text/javascript" src="lib/jquery/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="lib/jquery-sortable/jquery-sortable.js"></script>
-    <script type="text/javascript" src="lib/bootstrap/bootstrap.min.js"></script>
-    <script type="text/javascript" src="lib/bootstrap-tags/bootstrap-tags.min.js"></script>
-    <script type="text/javascript" src="lib/angular/angular.min.js"></script>
-    <script type="text/javascript" src="lib/angular/angular-animate.min.js"></script>
-    <script type="text/javascript" src="lib/angular/angular-route.js"></script>
-    <script type="text/javascript" src="lib/d3/d3.min.js"></script>
-    <script type="text/javascript" src="lib/zeroclipboard/ZeroClipboard.min.js"></script>
-
-    <script src="js/charts.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/directives.js"></script>
+    <script type="text/javascript" src="/lib/underscore/underscore-min.js"></script>
+    <script type="text/javascript" src="/lib/jquery/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="/lib/jquery-sortable/jquery-sortable.js"></script>
+    <script type="text/javascript" src="/lib/bootstrap/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/lib/bootstrap-tags/bootstrap-tags.min.js"></script>
+    <script type="text/javascript" src="/lib/angular/angular.min.js"></script>
+    <script type="text/javascript" src="/lib/angular/angular-animate.min.js"></script>
+    <script type="text/javascript" src="/lib/angular/angular-route.js"></script>
+    <script type="text/javascript" src="/lib/d3/d3.min.js"></script>
+    <script type="text/javascript" src="/lib/zeroclipboard/ZeroClipboard.min.js"></script>
+    
+    <script src="/js/charts.js"></script>
+    <script src="/js/app.js"></script>
+    <script src="/js/controllers.js"></script>
+    <script src="/js/directives.js"></script>
 
     <link rel="shortcut icon" type="image/x-icon" href="/img/ic_fav.png">
   </head>
-  <body ng-controller="MainController" class="fuelux">
+  <body ng-controller="MainController" ng-init="init({{foo}})">
+
     <nav class="navbar navbar-inverse" role="navigation">
       <div class="container-fluid">
         <a href="#" ng-click="nav('/')">
