--- a/pmp/static/partials/campaign.html
+++ b/pmp/static/partials/campaign.html
@@ -1,4 +1,4 @@
-<div class="row spacing">
+<div class="row spacing"  ng-init="init()">
   <div class="col-lg-9 col-md-9 col-sm-9">
     <div class="row">
       <h1 class="pull-right white">
