--- a/pmp/templates/graph.html
+++ b/pmp/templates/graph.html
@@ -30,7 +30,7 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="/img/ic_fav.png">
   </head>
-  <body ng-controller="MainController" ng-init="ginit({{data}})">
+  <body ng-controller="MainController">
 
     <nav class="navbar navbar-inverse" role="navigation">
       <div class="container-fluid">
