--- a/pmp/templates/graph.html
+++ b/pmp/templates/graph.html
@@ -51,13 +51,13 @@
         <div class="row">
           <div class="col-lg-offset-9 col-lg-3 col-md-offset-9 col-md-3 col-sm-offset-9 col-sm-3">
 
-            <div class="panel panel-success popup" ng-show="showSuccess">
+            <div class="panel {{popUp.style}} popup" ng-show="popUp.show">
               <div class="panel-heading text-uppercase">
-                <i class="fa fa-check spacing-r"></i> 
-                <strong>Success</strong>
+                <i class="fa {{popUp.icon}} spacing-r"></i> 
+                <strong>{{popUp.title}}</strong>
               </div>
               <div class="panel-body">
-                <small>{{popUpMessage}}</small>
+                <small>{{popUp.message}}</small>
               </div>
             </div>
 
@@ -65,16 +65,6 @@
               <div class="panel-heading text-uppercase">
                 <i class="fa fa-frown-o spacing-r"></i> 
                 <strong>Error</strong>
-              </div>
-              <div class="panel-body">
-                <small>{{popUpMessage}}</small>
-              </div>
-            </div>
-            
-            <div class="panel panel-warning popup" ng-show="showWarning">
-              <div class="panel-heading text-uppercase">
-                <i class="fa fa-exclamation-triangle spacing-r"></i> 
-                <strong>Warning</strong>
               </div>
               <div class="panel-body">
                 <small>{{popUpMessage}}</small>
