--- a/pmp/static/partials/campaign.html
+++ b/pmp/static/partials/campaign.html
@@ -58,8 +58,16 @@
       <small><i class="fa fa-share"></i> Share</small>
     </a>
     <div id="advanced" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12 spacing">
+      
+      <div class="form-group">
+        <label class="checkbox-inline text-uppercase">
+          <input type="checkbox" value="true" checked="checked" ng-model="showDate">
+          <small>
+            Show current time
+          </small>
+        </label>
+      </div>
 
-      <hr class="line">
       <form class="form-inline">
         <h6 class="text-center text-uppercase">Filter by priority:</h6>
         <div class="form-group form-group-sm">
