--- a/pmp/static/partials/campaign.html
+++ b/pmp/static/partials/campaign.html
@@ -79,11 +79,23 @@
         <small class="text-uppercase">Filter by priority:</small>
         <div class="form-group form-group-sm">
           <div class="input-group">
+            <select class="form-control text-center" ng-model="minPriority" ng-change="updateRequestData()">
+              <option ng-repeat="(key, value) in priorityPerBlock"
+                      value="{{value}}">
+                {{key}}
+              </option>
+            </select>
             <input type="text" class="form-control" placeholder="min"
                    ng-model="minPriority" ng-change="updateRequestData()">
             <div class="input-group-addon">
               &le; x &le;
             </div>
+            <select class="form-control text-center" ng-model="maxPriority" ng-change="updateRequestData()">
+              <option ng-repeat="(key, value) in priorityPerBlock"
+                      value="{{value}}">
+                {{key}}
+              </option>
+            </select>
             <input type="text" class="form-control" placeholder="max"
                    ng-model="maxPriority" ng-change="updateRequestData()">
           </div>
