add timestamp value to url

--- a/pmp/static/partials/campaign.html
+++ b/pmp/static/partials/campaign.html
@@ -61,7 +61,7 @@
       
       <form class="form-group text-uppercase">
         <label class="checkbox-inline col-lg-12">
-          <input type="checkbox" ng-model="showDate">
+          <input type="checkbox" ng-model="showDate" ng-change="setURL()">
           <small>
             Show current time
           </small>
